scenario-04-secure-application-deployment/manifests/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-test
  namespace: healthcare
  labels:
    app: network-test
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["/bin/sh", "-c", "sleep 3600"]
      resources:
        requests:
          memory: "64Mi"
          cpu: "50m"
        limits:
          memory: "128Mi"
          cpu: "100m"
