scenario-04-secure-application-deployment/manifests/healthcare-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcare-app-external
  namespace: healthcare
spec:
  selector:
    app: healthcare-app
  ports:
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
  type: NodePort
